--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
+    <nav><ul><li><a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ">buns1</a></li><li><a href = "https://www.youtube.com/watch?v=PuVuNRqsNW0">buns2</a></li></ul></nav>
     <h1>This is my first website</h1>
+    <p>i am buns i am buns i could not solve i could not solve limit test</p>
   </body>
 </html>
